<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_main_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_standard"/>

        <Button
            android:id="@+id/btn_main_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_action"/>

        <Button
            android:id="@+id/btn_custom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_custom_dialog"/>

        <Button
            android:id="@+id/btn_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_fragment"/>

    </LinearLayout>


</RelativeLayout>