<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/ic_launcher_background"
        android:text="@string/title_custom_dialog"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_custom_dialog"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DEDEDE"
        />
    <Button
        android:id="@+id/btn_dismiss_custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_dismiss"
        />
</LinearLayout>